--- a/app/src/main/res/layout/fragment_add_user.xml
+++ b/app/src/main/res/layout/fragment_add_user.xml
@@ -9,14 +9,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/input_username"
-        android:gravity="center_vertical"
         android:layout_marginRight="20dip"
+        android:layout_marginBottom="9dp"
+        android:gravity="center_vertical"
         android:text="Username:" />
 
     <EditText
         android:id="@+id/input_username"
-        android:layout_width="match_parent"
+        android:layout_width="255dp"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/input_pass"
         android:layout_toRightOf="@id/add_username"
         android:imeOptions="actionDone"
         android:inputType="text" />
@@ -33,42 +35,28 @@
 
     <EditText
         android:id="@+id/input_pass"
-        android:layout_width="match_parent"
+        android:layout_width="255dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/input_username"
         android:layout_toRightOf="@id/add_pass"
         android:imeOptions="actionDone"
         android:inputType="text" />
 
-<!--    <RadioButton-->
-<!--        android:id="@+id/switch_legal"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@id/input_pass"-->
-<!--        android:layout_centerVertical="true"-->
-<!--        android:layout_gravity="start"-->
-<!--        android:layout_marginTop="0dp"-->
-<!--        android:checked="true"-->
-<!--        android:showText="true"-->
-<!--        android:text="Legal User"-->
-<!--        android:textAlignment="textStart" />-->
-
     <ToggleButton
         android:id="@+id/toggle_legal"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/input_pass"
         android:showText="true"
-        android:textOn="legal"
-        android:textOff="illegal"/>
+        android:textOff="illegal"
+        android:textOn="legal" />
 
     <Button
         android:id="@+id/bt_save_add"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/toggle_legal"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
+        android:layout_below="@id/input_pass"
+        android:layout_toRightOf="@id/toggle_legal"
         android:text="save" />
 
 </RelativeLayout>
