--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,32 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fragment_home"
     tools:context=".gui.HomeFragment">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/server_ip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/start_stop_button"
+        android:gravity="center"
+        android:textColor="@color/teal_700"
+        android:textSize="16sp"
+        android:layout_marginBottom="10dp"/>
+
+    <ToggleButton
+        android:id="@+id/start_stop_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true">
-
-        <ToggleButton
-            android:id="@+id/start_stop_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/teal_700"
-            android:textColor="@color/white"
-            android:textOff="Start Server"
-            android:textOn="Stop Server" />
-
-        <TextView
-            android:id="@+id/server_ip"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-
+        android:layout_centerInParent="true"
+        android:backgroundTint="@color/teal_700"
+        android:textColor="@color/white"
+        android:textOff="Start Server"
+        android:textOn="Stop Server" />
 </RelativeLayout>
