--- a/app/src/main/res/layout/user_list_item_layout.xml
+++ b/app/src/main/res/layout/user_list_item_layout.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_toLeftOf="@id/user_edit_btn"
+            android:layout_toLeftOf="@id/user_delete_btn"
             android:gravity="center_vertical|start" />
 
         <TextView
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/user_name"
-            android:layout_toLeftOf="@id/user_edit_btn"
+            android:layout_toLeftOf="@id/user_delete_btn"
             android:layout_alignParentLeft="true"
             android:gravity="center_vertical" />
 
@@ -38,24 +38,17 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/user_password"
             android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@id/user_edit_btn" />
+            android:layout_toLeftOf="@id/user_delete_btn" />
 
-        <Button
+        <ImageButton
             android:id="@+id/user_delete_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/user_edit_btn"
             android:layout_alignParentTop="false"
             android:layout_alignParentRight="true"
+            android:background="#00000000"
+            android:src="@drawable/ic_baseline_delete_24"
             android:text="@string/delete" />
-
-        <Button
-            android:id="@+id/user_edit_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:text="@string/edit" />
 
     </RelativeLayout>
 
